# news_crawlers

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  notificators.py  prepare_venv.bat  pyproject.toml  requirements.txt  scrape.py  scrapy.cfg  setup.py  tox.ini
.github/workflows/: main.yml  tests.yml
news_crawlers/: __main__.py  configuration.py  items.py  main.py  news_crawlers.yaml  notificators.py  pipelines.py  scheduler.py  scrape.py  settings.py  spiders.py
news_crawlers/spiders/: avtonet_spider.py  bolha_spider.py  carobni_svet_spider.py
paginator_spiders/: middlewares.py  settings.py
paginator_spiders/spiders/: bolha_configuration.yaml  bolha_spider.py
test_home/: avtonet_configuration.yaml  bolha_configuration.yaml  carobni_svet_configuration.yaml
tests/: Test_notificators.py  mocks.py  test_configuration.py  test_main.py  test_notificators.py  test_scheduler.py
tests/res/: bolha_test_html.html
