[build-system]
requires = [ "setuptools", "setuptools-scm",]
build-backend = "setuptools.build_meta"

[project]
name = "news_crawlers"
version = "3.2.0"
description = "An extensible python library to create web crawlers which alert users on news."
readme = "README.md"
requires-python = ">=3.7"
keywords = [ "crawler", "news",]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "beautifulsoup4>=4.9",
    "pydantic>=1.8",
    "PyYAML>=5.4",
    "requests>=2.25",
    "schedule>=1.1",
    "importlib_metadata>=1.0",
]
[[project.authors]]
name = "Jost Prevc"
email = "jost.prevc@gmail.com"

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://github.com/jprevc/news_crawlers"
Repository = "https://github.com/jprevc/news_crawlers"
Changelog = "https://github.com/jprevc/news_crawlers/blob/master/CHANGELOG.md"

[project.optional-dependencies]
dev = [ "pytest", "pytest-cov", "pylint", "pre-commit", "black[d]", "mypy", "types-beautifulsoup4", "types-requests", "types-PyYAML",]
test = [ "pytest", "pytest-cov",]

[project.scripts]
news_crawlers = "news_crawlers.__main__:main"

[tool.setuptools]
packages = [ "news_crawlers",]

[tool.black]
line-length = 120

[tool.pytest.ini_options]
addopts = "--cov=news_crawlers --cov-report=xml --cov-report=term"
